--- a/src/main/webapp/resources/css/easy-responsive-tabs.css
+++ b/src/main/webapp/resources/css/easy-responsive-tabs.css
@@ -4,7 +4,9 @@
   max-width:100%;
 }
 .cd-tabs-content{ border:1px solid #ccc; text-align:left; margin-top:-1px;}
-.cd-tabs-content li{ padding:27px;}
+.cd-tabs-content li{ padding:27px 27px 5px 27px;height:100%;}
+.cd-tabs-content .bgpink th{ text-align:center;}
+.table-body{background-color:gray !important;}
 .cd-tabs:after {
   content: "";
   display: table;
@@ -67,7 +69,7 @@
 /*}*/
 
 .cd-tabs-navigation {
-  width:400px;
+  width:100%;
 }
 .cd-tabs-navigation:after {
   content: "";
@@ -78,13 +80,14 @@
   float: left;
 }
 .cd-tabs-navigation a {
+
   position: relative;
   display: block;
   text-align: center;
   font-size: 18px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: #333;
+  color:#b3b3b3;
   padding-top: 34px; border:1px solid #ccc; margin-right:5px;
 }
 .no-touch .cd-tabs-navigation a:hover {
@@ -92,7 +95,8 @@
   background-color: rgba(233, 230, 202, 0.3);
 }
 .cd-tabs-navigation a.selected {
-  background-color: #ffffff !important;
+  background-color: #343690 !important;
+  font-weight:bold;
   color: #ec268f;border-top:1px solid #ccc;border-right:1px solid #ccc;border-left:1px solid #ccc;border-bottom:1px solid #fff;
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#eeeeee+0,f6f6f6+38,ffffff+100 */
 background: #eeeeee; /* Old browsers */
@@ -149,15 +153,22 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', end
 .cd-tabs-navigation a[data-content='trash'].selected::before {
   background-position: -100px -20px;
 }
+.customer_edit,.customer_delete{
+    background-color: #343690;
+	color:#fff;
+}
+.customer_edit:hover,.customer_delete:hover{
+	background-color:#ec268f !important;
+	color:#fff;
+}
+
 @media only screen and (min-width: 768px) {
   .cd-tabs-navigation {
     /*width: 80px;
     float: left;*/
   }
-  .cd-tabs-navigation a {
-  }
-  .cd-tabs-navigation a.selected {
-  }
+  
+ 
   .cd-tabs-navigation a::before {
     /*top: 22px;*/
   }
@@ -166,17 +177,22 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', end
 /*  .cd-tabs-navigation {
     width: auto;
   }*/
+  .cd-tabs-content .table td{
+	  text-align:center !important;
+  }
+  .form-control{
+	  text-align:center;
+  }
   .cd-tabs-navigation a {
     width: auto;
     text-align: center;
     font-size:18px;
     padding:10px 30px;
-  }
-  .cd-tabs-navigation a.selected {
-  }
+	text-decoration:none;
+	}
   .cd-tabs-navigation a::before {
     top: 50%;
-    margin-top: -10px;
+    margin-top: -10px; 
     margin-left: 0;
     left: 38px;
   }
@@ -193,6 +209,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', end
   -webkit-animation: cd-fade-in 0.5s;
   -moz-animation: cd-fade-in 0.5s;
   animation: cd-fade-in 0.5s;
+  text-decoration:none;
 }
 .cd-tabs-content li p {
   font-size: 14px;
@@ -201,10 +218,21 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', end
   color: #8493bf;
   margin-bottom: 2em;
 }
-@media only screen and (min-width: 768px) {
+.additem_btn{
+	
+	font-size:16px;
+	padding:3px 12px !important;
+	background-color: #343690 !important;
+	color:#fff;
+	
+}
+.additem_btn:hover{
+	background-color:#ec268f !important;
+	color:#fff;
 
 }
-@media only screen and (min-width: 960px) {
+.additem_btn.focus, .additem_btn:focus, .additem_btn:hover{
+	color:#fff !important;
 }
 
 @-webkit-keyframes cd-fade-in {
