--- a/src/main/webapp/resources/css/monginis.css
+++ b/src/main/webapp/resources/css/monginis.css
@@ -85,7 +85,7 @@ box-shadow:         0px 2px 14px 0px rgba(0, 0, 0, 0.25);}
 .microsoft {position: relative;}
 
 .latestNews{ margin-bottom:20px; width:100%; float:left; padding-left:165px; padding-right:20px; position:relative; height:44px; line-height:44px; background:#ec268f;}
-.latestNewsTitle{ width:145px; position:absolute; left:0px; top:0px; height:44px; background:#343690; text-align:center; font-size:20px; color:#fff;}
+.latestNewsTitle{ line-height:44px;width:145px; position:absolute; left:0px; top:0px; height:44px; background:#343690; text-align:center; font-size:20px; color:#fff;}
 
 .topBarLog{ float:right; padding:10px 0px 10px 20px; font-size:14px; color:#fff;}
 .topBarLog a:link,.topBarLog a:visited{ text-decoration:none; color:#fff;-webkit-transition: all ease 0.5s;-moz-transition:all ease 0.5s;-o-transition:all ease 0.5s;-ms-transition:all ease 0.5s;transition:all ease 0.5s;}
@@ -266,7 +266,7 @@ a.saveOrder:hover{background:#343690;}
     height:150%;
     width: 0;
     position:absolute;
-    z-index:99;
+    z-index:3;
     top: 0; bottom:0px;
     left:0; color:#000;overflow:auto;
 	-webkit-transition: all ease 0.2s;-moz-transition: all ease 0.2s;-o-transition: all ease 0.2s;-ms-transition: all ease 0.2s;transition: all ease 0.2s;
@@ -290,9 +290,9 @@ padding:20px 60px 20px 20px; text-align:left;}
 
 
 * {-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}:before, :after {-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
-#mySidenav{-webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s; margin-top:186px;}
-#mySidenav1{-webkit-transition: all ease 0.2s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.2s;-ms-transition: all ease 0.2s;transition: all ease 0.2s; margin-top:121px; margin-top:186px;}
-#mySidenav3{-webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s; margin-top:186px;}
+#mySidenav{-webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s; }
+#mySidenav1{-webkit-transition: all ease 0.2s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.2s;-ms-transition: all ease 0.2s;transition: all ease 0.2s;}
+#mySidenav3{-webkit-transition: all ease 0.5s;-moz-transition: all ease 0.5s;-o-transition: all ease 0.5s;-ms-transition: all ease 0.5s;transition: all ease 0.5s; }
 .managecar{ width:100%; float:left;}
 
 .listarea{ width:100%; float:left; padding:0px 10%;}
